<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/aga_fundo_imagine_grande"
    tools:context="com.tibaes.agaproject.MainActivity">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foregroundGravity="center"
        android:layout_margin="20dp"
        android:background="@color/colorWhite"
        android:id="@+id/gridLayout">

        <Button
            android:id="@+id/btn_t_shirts"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_column="0"
            android:layout_margin="6dp"
            android:layout_row="0"
            android:width="150dp"
            android:background="@color/colorWhite"
            android:text="@string/t_shits" />

        <Button
            android:id="@+id/btn_new_t_shirt"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_column="0"
            android:layout_margin="6dp"
            android:layout_row="1"
            android:width="150dp"
            android:background="@color/colorWhite"
            android:text="@string/new_t_shits" />

        <Button
            android:id="@+id/btn_clients"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_column="1"
            android:layout_margin="6dp"
            android:layout_row="0"
            android:width="150dp"
            android:background="@color/colorWhite"
            android:text="@string/clients" />

        <Button
            android:id="@+id/btn_new_clients"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_column="1"
            android:layout_margin="6dp"
            android:layout_row="1"
            android:width="150dp"
            android:background="@color/colorWhite"
            android:text="@string/new_client" />

        <Button
            android:id="@+id/btn_new_sale"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_column="0"
            android:layout_margin="6dp"
            android:layout_row="2"
            android:width="150dp"
            android:background="@color/colorWhite"
            android:text="@string/new_sale" />

        <Button
            android:id="@+id/btn_shortcuts"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_column="1"
            android:layout_margin="6dp"
            android:layout_row="2"
            android:width="150dp"
            android:background="@color/colorWhite"
            android:text="@string/about_us" />
    </GridLayout>


</RelativeLayout>
